--- a/css/layout.css
+++ b/css/layout.css
@@ -32,6 +32,7 @@
 
     display: flex;
     flex-direction: column;
+    gap: 0.75rem;
 
     list-style: none;
 
